import enum


class Position(int, enum.Enum):
    OFF_BOARD = 0
    ONE = 1
    TWO = 2
    THREE = 3
    FOUR = 4
    FIVE = 5
    SIX = 6
    SEVEN = 7
    EIGHT = 8
    NINE = 9
    TEN = 10
    ELEVEN = 11
    TWELVE = 12
    THIRTEEN = 13
    FOURTEEN = 14
    FIFTEEN = 15
    SIXTEEN = 16
    SEVENTEEN = 17
    EIGHTEEN = 18
    NINETEEN = 19
    TWENTY = 20
    TWENTY_ONE = 21
    TWENTY_TWO = 22
    TWENTY_THREE = 23
    TWENTY_FOUR = 24
    BAR = 25

    @classmethod
    def pos_13_to_24(cls) -> list['Position']:
        return [
            cls.THIRTEEN,
            cls.FOURTEEN,
            cls.FIFTEEN,
            cls.SIXTEEN,
            cls.SEVENTEEN,
            cls.EIGHTEEN,
            cls.NINETEEN,
            cls.TWENTY,
            cls.TWENTY_ONE,
            cls.TWENTY_TWO,
            cls.TWENTY_THREE,
            cls.TWENTY_FOUR,
        ]

    @classmethod
    def pos_12_to_1(cls) -> list['Position']:
        return [
            cls.TWELVE,
            cls.ELEVEN,
            cls.TEN,
            cls.NINE,
            cls.EIGHT,
            cls.SEVEN,
            cls.SIX,
            cls.FIVE,
            cls.FOUR,
            cls.THREE,
            cls.TWO,
            cls.ONE,
        ]
