class DiceView:
    def show(self) -> None:
        pass
